--- a/bootylicious-client/src/containers/Workouts.css
+++ b/bootylicious-client/src/containers/Workouts.css
@@ -1,10 +1,14 @@
 .WorkoutContainer {
   padding: 16px;
+  font-family: 'Raleway', sans-serif;
+
 }
+
 .WorkoutCard {
   float: left;
   margin: 1.5%;
   background: #ABFFD1;
+  color: navy;
   width: 30%;
   height: 20%;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
