--- a/bootylicious-client/src/containers/Workouts.css
+++ b/bootylicious-client/src/containers/Workouts.css
@@ -18,3 +18,24 @@
 .WorkoutCard:hover {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
+
+.workoutForm {
+    /* margin: auto;
+    width: 50%;
+    height: 50%;
+    border: 1.5px solid lightgrey;
+    padding: 10px; */
+    float: left;
+    margin: 1.5%;
+    /* border: 1.5px solid lightgrey; */
+    background: whitesmoke;
+    color: #ABFFD1;
+    width: 30%;
+    height: 20%;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.workoutForm:hover {
+  box-shadow: 0 14px 28px rgba(0,10,150,0.25), 0 10px 10px rgba(0,10,150,0.22);
+}
