--- a/bootylicious-client/src/containers/App.css
+++ b/bootylicious-client/src/containers/App.css
@@ -28,3 +28,14 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+.button {
+  background-color: navy;
+  color: white;
+  padding: 5px 10px;
+  opacity: 0.5;
+  border: none;
+}
+
+.button:hover {
+  opacity:1;
+}
