--- a/bootylicious-client/src/containers/Workouts.css
+++ b/bootylicious-client/src/containers/Workouts.css
@@ -28,7 +28,7 @@
     float: left;
     margin: 1.5%;
     /* border: 1.5px solid lightgrey; */
-    background: whitesmoke;
+    background: silver;
     color: #ABFFD1;
     width: 30%;
     height: 20%;
