--- a/bootylicious-client/src/containers/App.css
+++ b/bootylicious-client/src/containers/App.css
@@ -39,3 +39,21 @@
 .button:hover {
   opacity:1;
 }
+
+.Navbar {
+  padding-top: 20px;
+  text-align: center;
+}
+
+.nav-button {
+  background-color: grey;
+  font-size: 20px;
+  color: white;
+  padding: 15px 15px;
+  opacity: 0.5;
+  font-family: 'Raleway', sans-serif;
+}
+
+.nav-button:hover {
+  opacity:1;
+}
