--- a/bootylicious-client/src/containers/App.css
+++ b/bootylicious-client/src/containers/App.css
@@ -1,35 +1,16 @@
 .App {
   text-align: center;
   background: grey;
-  color: navy;
+  color: lightblue;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-/* .App-header {
-  background-color: #222;
-  height: 50px;
-  padding: 10px;
-  color: white;
-} */
 
 .App-title {
   font-size: 1.5em;
   font-family: 'Raleway', sans-serif;
-  background-color: white;
+  /* background-color: white; */
 }
 
-.App-intro {
-  font-size: large;
-}
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
 .button {
   background-color: navy;
   color: white;
@@ -43,7 +24,7 @@
 }
 
 .navbar-container {
-  width: 100%;
+  width: 33%;
   padding-bottom: 15px;
   padding-right: 15px;
   padding-top: 15px;
@@ -55,14 +36,14 @@
    /* margin-right: 0px; */
    /* padding: 0 30px; */
    margin: 5px;
-   opacity: 0.5;
-   color: pink;
-   font-weight: 600;
+   opacity: 1;
+   color: #ABFFD1;
+   font-weight: 900;
    text-decoration: none;
    font-family: 'Raleway', sans-serif;
    font-size: 18px;
  }
 
  .nav-item:hover {
-   opacity: 1;
+   opacity: .7;
  }
