--- a/bootylicious-client/src/containers/Workouts.css
+++ b/bootylicious-client/src/containers/Workouts.css
@@ -1,7 +1,7 @@
 .WorkoutContainer {
-  padding: 16px;
+  padding: 7px;
   font-family: 'Raleway', sans-serif;
-
+  color: navy;
 }
 
 .WorkoutCard {
