updated workout form

--- a/bootylicious-client/src/styles/Workouts.css
+++ b/bootylicious-client/src/styles/Workouts.css
@@ -42,8 +42,7 @@
 }
 
 .workoutShow-card {
-  float: left;
-  margin: 1.5%;
+  margin: 2% 2% 0 35%;
   background: #ABFFD1;
   color: navy;
   width: 30%;
