--- a/bootylicious-client/src/styles/App.css
+++ b/bootylicious-client/src/styles/App.css
@@ -1,6 +1,6 @@
  .App {
   text-align: center;
-  color: lightblue;
+  color: navy;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -49,9 +49,11 @@
  }
 
  .Footer {
-   padding: 15px;
-   text-align: center;
-   font-size: 14px;
+    clear: both;
+    position: relative;
+    z-index: 15;
+    height: 3em;
+    margin-top: -3em;
  }
 
  .img {
