--- a/bootylicious-client/src/styles/Workouts.css
+++ b/bootylicious-client/src/styles/Workouts.css
@@ -20,18 +20,11 @@
 }
 
 .workoutForm {
-    /* margin: auto;
-    width: 50%;
-    height: 50%;
-    border: 1.5px solid lightgrey;
-    padding: 10px; */
-    /* float: left; */
-    margin: 1.5%;
-    /* border: 1.5px solid lightgrey; */
+    margin: 5% auto;
     text-align: center;
     background: silver;
     color: #ABFFD1;
-    width: 30%;
+    width: 25%;
     height: 20%;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -42,7 +35,7 @@
 }
 
 .workoutShow-card {
-  margin: 2% 2% 0 35%;
+  margin: 5% auto;
   background: #ABFFD1;
   color: navy;
   width: 30%;
