--- a/bootylicious-client/src/styles/App.css
+++ b/bootylicious-client/src/styles/App.css
@@ -8,6 +8,8 @@
   font-size: 1.5em;
   font-family: 'Raleway', sans-serif;
   background: grey;
+  color: lightblue;
+  margin-bottom: 5%;
 }
 
 
@@ -58,4 +60,9 @@
 
  .img {
    position: center;
+   margin-top: auto;
+   margin-left: auto;
+   margin-right: auto;
+   margin-bottom: 5%;
+   display: block;
  }
