--- a/bootylicious-client/src/styles/Workouts.css
+++ b/bootylicious-client/src/styles/Workouts.css
@@ -11,27 +11,27 @@
   color: navy;
   width: 30%;
   height: 20%;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
 .WorkoutCard:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .workoutForm {
-    margin: 5% auto;
-    text-align: center;
-    background: silver;
-    color: #ABFFD1;
-    width: 25%;
-    height: 20%;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  margin: 5% auto;
+  text-align: center;
+  background: silver;
+  color: #ABFFD1;
+  width: 25%;
+  height: 20%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
 .workoutForm:hover {
-  box-shadow: 0 14px 28px rgba(0,10,150,0.25), 0 10px 10px rgba(0,10,150,0.22);
+  box-shadow: 0 14px 28px rgba(0, 10, 150, 0.25), 0 10px 10px rgba(0, 10, 150, 0.22);
 }
 
 .workoutShow-card {
